apps/mbug/style.css
.issue-citation {
  margin: 30 20 30 20;
  display: flex;
}

.issue-citation .priority {
  margin-top: 16px;
}

.owner-avatar {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  font-size: 32px;
  color: #fff;
  flex-grow: 0;
  overflow: hidden;
  margin-right: 20px;
  width: 55px;
  height: 55px;
  border-radius: 30px;
  border: 1px solid #999;
}

.issue-citation .middle {
  flex: 1;
  margin-right: 10px;
}

.priority {
  align-self: center;
  border-radius: 4px;
  color: white;
  flex-grow: 0;
  font-weight: 700;
  padding: 4px;
  text-align: center;
}

.priority-0 {
  background: #FF0000;
}

.priority-1 {
  background: #DB4437;
}

.priority-2 {
  background: #F4B400;
}

.priority-3 {
  background: #4285F4;
}

.issue-citation .id {
   font-size: 1.5em;
   font-weight: 300;
}

body {
  font-family: Roboto2, 'Helvetica Neue', Helvetica, Arial;
}

.email-photo {
  overflow: hidden;
  width: 80px;
  height: 80px;
  border-radius: 50px;
  border: 1px solid;
}

.project-view {
  margin-left: 25px;
}

.project-citation {
  margin-top: 20px;
}

.project-citation img {
  vertical-align: middle;
  margin-right: 35px;
}

.project-citation .project-name {
  vertical-align: middle;
  font-size: x-large;
}

.project-citation .project-name.selected {
  color: #03A9F4;
}

.actionButton {
  padding: 8px;
  vertical-align: middle;
  background: #03A9F4;
  border: none;
  -webkit-box-shadow: none;
  box-shadown: none;
  opacity: 0.76;
}

.actionButton:hover, .popupChoiceView:hover {
  background: #0F9D58;
  border-radius:100px;
  outline: none;
}

.popupChoiceView {
  padding: 8px;
  margin-right: 20px;
  margin-left: 20px;
  outline: none;
  opacity: 0.76;
  background: transparent;
}

.popupChoiceList {
  width: 215px;
  margin-left: 10px;
  margin-top: -5px;
}

.popupChoiceList li {
  color: rgba(0, 0, 0, 0.54);
  font-size: 28;
  margin: 45 20 45 0;
}

.popupChoiceList li.selected {
  color: #03A9F4;
}

.issue-edit .header {
  background: #03A9F4;
  color: #fff;
  padding: 92px 32px 70px 32px;
  font-size: 32px;
}

.issue-edit .separator {
  border-top: #e9e9e9 1px solid;
}

.issue-edit .choice {
  font-size: 32px;
  display: flex;
  align-items: center;
  padding: 16px 12px;
}

.issue-edit .owner {
  padding: 12px;
}

.issue-edit .owner-header {
  padding: 12px 0 24px 0;
  color: #999;
  font-size: 21px;
}

.issue-edit .owner-info {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.owner-name.placeholder {
  color: #b2b2b2
}

.issue-edit .owner .owner-name {
  border-bottom: 1px solid #e9e9e9;
  font-size: 24px;
  flex: 1 0 auto;
}

.issue-edit .cc {
  padding: 12px;
}

.issue-edit .cc-header {
  padding: 12px 0 24px 0;
  color: #999;
  font-size: 21px;
}

.issue-edit .priority {
  font-weight: 700;
  color: white;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 44px;
  height: 44px;
  border-radius: 4px;
}

.issue-edit .priority-1 {
  background: #DB4437;
}

.issue-edit .priority-2 {
  background: #F4B400;
}

.issue-edit .priority-3 {
  background: #4285F4;
}

.issue-citation span[name=id] {
  font-size: larger;
  color: #555;
  font-size: 16pt;
}

.issue-citation span[name=summary] {
  display: block;
  margin-top: 6px;
  color: #999;
  font-size: 14pt;
}

input[name=q] {
  align-self: center;
  margin: 20px;
  height: 45px;
  border: none;
  color: white;
  background: #03A9F4;
  padding-left: 10px;
  font-size: larger;
}

input[name=q]:focus {
  outline: none;
  opacity: 0.76;
}

input[name=q]::-webkit-input-placeholder {
  font-size: larger;
  color: white;
  opacity: 0.76;
  height: 55px;
}

.actionButton-leaveSearchMode img {
  opacity: 0.76;
}

select[name=sortOrder] {
  align-self: center;
  margin: 20px;
}

.mbug .header {
  display: flex;
  background: #03A9F4;
  padding: 5px;
}

.mbug .header .default {
  flex: 1.0;
  display: flex;
}

.mbug.searchMode .header .default {
  display: none;
}

.mbug:not(.searchMode) .header .search {
  display: none;
}

span[name=projectName] {
  align-self: center;
  flex: 1.0;
  color: white;
  font-size: xx-large;
  margin-left: 42px;
  vertical-align: middle;
  font-size: 28pt;
}

.stackview_navbar {
  display: none;
}

.stackview_navactions {
  display: none;
}

.stackview-previewarea-td {
  display: none;
}

.issue-edit .actionButton-done {
  background: white;
  padding: 0;
}

.issue-edit .star {
  vertical-align: middle;
  position: absolute;
  right: 10px;
}

.actionButton-done:hover {
  background: #0F9D58;
  border-radius:100px;
}

.status-icon {
  opacity: 0.87;
  margin: 3px;
}

select[name=pri], select[name=status] {
  background: white;
  border-color: white;
  width: 250px;
  height: 30px;
  margin-left: 30px;
  margin-top: 16px;
  outline: none;
}

.comment-view .published {
  color: #999;
}

.comment-view {
  display: flex;
}

.comment-view .content {
  flex: 1;
}

.mbug.searchMode .cannedQuery {
  display: none;
}

.cannedQuery {
  height: 36px;
}

.cannedQuery li {
  font-size: 16pt;
  padding-bottom: 14px;
  opacity: 0.76;
}

.cannedQuery .selected {
  border-bottom: 3px solid red;
  opacity: 1.0;
}

ul.cannedQuery {
  background: #03A9F4;
  padding: 10 0 3 100 !important;
  margin: 0;
  color: white;
}

::-webkit-search-cancel-button {
  -webkit-appearance: none;
}

